--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ img {
   height: 100%;
   width: 100%;
   object-fit: cover;
-  object-position: center;
+  object-position: bottom center;
 }
 
 section {
@@ -152,11 +152,15 @@ section {
   background-color: rgb(34, 34, 34);
   color: beige;
   box-shadow: 1px 1px 21px 3px inset rgb(0, 0, 0);
-  min-height: 90vh;
+  min-height: 62vh;
 }
 
 .about__title {
   font-size: 2.2rem;
+}
+
+.about__content {
+  font-size: 1.3rem;
 }
 
 .event__title {
@@ -165,7 +169,7 @@ section {
 }
 
 .event__desc {
-  font-size: 1.25rem;
+  font-size: 1.8rem;
 }
 
 .event__img__container {
@@ -176,7 +180,8 @@ section {
   margin-top: 1.5rem;
 }
 .event__img__container > * {
-  max-width: 300px;
+  width: 300px;
+  height: 300px;
   border-radius: 10px;
 }
 
@@ -199,4 +204,12 @@ section {
 
 .event__iv > * {
   padding-block: 0.5rem;
+}
+
+.copyright {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  background-color: rgba(50, 187, 64, 0.925);
+  padding: 0.4rem;
 }
